<resources>
    <string name="app_name">POS Playground</string>

    <string name="action_settings">Settings</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment_format">Hello second fragment. Arg: %1$s</string>
    <string name="hello_second_fragment">This is the Second fragment!</string>
    <string name="splash_screen_details">
        This is a full-screen activity that hides the native system Navigation Bar.
        As a general rule of thumb, you should provide the user an alternative option to navigate,
        such as a back button, or an \'Exit App\' function.</string>
    <string name="splash_screen_message">Splash Screen</string>
    <string name="skip_timer">Skip Timer</string>
    <string name="main_launch_screen">Main Launch Screen</string>
    <string name="main_launch_screen_instructions">
        Click one of the buttons below to navigate to a new screen.</string>
    <string name="card_acquisition_immersive">Card Acquisition (Immersive)</string>
    <string name="card_acquisition_immersive_details">
        This screen prompts the user to present their card and utilizes the full-screen
        immersive option (which hides the system Navigation Bar).</string>
    <string name="navigation_bar_override">Navigation Bar Override</string>
    <string name="navigation_bar_override_details">
        This screen overrides the native behavior of the system Navigation Bar Home,
        Back and Recent Apps buttons.</string>
    <string name="navigation_override_screen_instructions">
        The native behavior for the Back, Home and Recent Apps buttons has been changed.
        Click on the system Navigation Bar buttons to see what happens.</string>
    <string name="navigation_override_back_button_message">
        On Back Click: I\'m sorry Dave, I\'m afraid I can\'t do that.</string>
    <string name="navigation_override_home_or_recent_apps_button_message">
        On Home / Recent Apps Click: I\'ll be back in just a moment, just watch!</string>
    <string name="go_back">Go Back</string>
</resources>
